--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,19 @@
 services:
-  app:
+  frontend:
     build:
       context: .
-    container_name: app
+    container_name: frontend
     ports:
       - "3000:3000"
     restart: always
+    profiles:
+      - front
+  backend:
+    build:
+      context: server/
+    container_name: backend
+    ports:
+      - "3001:3001"
+    restart: always
+    profiles:
+      - back
